--- a/src/index.html
+++ b/src/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -20,9 +20,11 @@
         <div class="slider round"></div>
       </label>
     </div>
+
     <!-- To Do List -->
     <div class="todo-container">
       <h1>To-Do List</h1>
+
       <!-- Filter Buttons -->
       <div class="filters">
         <button class="filter-btn active" data-filter="all">All</button>
@@ -34,6 +36,7 @@
         <button class="delete-all-btn">Delete All</button>
       </div>
       <!-- Input Form -->
+
       <form class="todo-input">
         <input type="text" placeholder="Add a new task..." />
         <input type="submit" value="Add" />
@@ -41,36 +44,9 @@
       <!-- Alert Of Passing Length -->
       <p class="alert-length">Alert Here</p>
       <!-- List Of To-do Tasks -->
-      <ul class="todo-list">
-        <!-- <li class="todo-item">
-          <span>Learn HTML</span>
-          <div class="actions">
-            <button class="complete">
-              <i class="fas fa-check-circle"></i>
-            </button>
-            <button class="delete"><i class="fas fa-times-circle"></i></button>
-          </div>
-        </li>
-        <li class="todo-item">
-          <span>Style with CSS</span>
-          <div class="actions">
-            <button class="complete">
-              <i class="fas fa-check-circle"></i>
-            </button>
-            <button class="delete"><i class="fas fa-times-circle"></i></button>
-          </div>
-        </li>
-        <li class="todo-item">
-          <span>Build a To-Do List</span>
-          <div class="actions">
-            <button class="complete">
-              <i class="fas fa-check-circle"></i>
-            </button>
-            <button class="delete"><i class="fas fa-times-circle"></i></button>
-          </div>
-        </li> -->
-      </ul>
+      <ul class="todo-list"></ul>
     </div>
-    <script src="main.js"></script>
+
+    <script src="main.js" type="module"></script>
   </body>
 </html>
