refactor: preparing to migrate from Js to Ts

--- a/src/index.html
+++ b/src/index.html
@@ -47,6 +47,6 @@
       <ul class="todo-list"></ul>
     </div>
 
-    <script src="main.js" type="module"></script>
+    <script src="../dist/main.js" type="module"></script>
   </body>
 </html>
